--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "generate-supabase-types": "npx supabase gen types --lang=typescript --project-id pkdqnffhfhajyeiqgkci --schema public > src/supabase/supabase.types.ts"
+    "generate-supabase-types": "supabase gen types typescript --project-id pkdqnffhfhajyeiqgkci --schema public > src/supabase/supabase.types.ts"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@supabase/supabase-js": "^2.46.1",
     "@tanstack/react-query": "4",
     "class-variance-authority": "^0.7.0",
