--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "postcss": "^8.4.49",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "supabase": ">=1.8.1",
+    "supabase": "^1.223.10",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
