--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "cva": "^0.0.0",
+    "dayjs": "^1.11.13",
     "i18next": "^23.16.5",
     "lucide-react": "^0.460.0",
     "npm": "^10.9.0",
+    "qs": "^6.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
@@ -40,6 +42,7 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@shadcn/ui": "^0.0.4",
+    "@types/qs": "^6.9.17",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
