--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@supabase/supabase-js": "^2.46.1",
-    "@tanstack/react-query": "4",
+    "@tanstack/react-query": "^5.62.15",
     "@types/underscore": "^1.13.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
